Fix alignment issue in progress bar text

--- a/src/pretalx/static/orga/scss/_layout.scss
+++ b/src/pretalx/static/orga/scss/_layout.scss
@@ -1011,6 +1011,7 @@ main .progress {
     position: absolute;
     text-align: center;
     width: 100%;
+    top: 50%;
   }
 }
 #anonymise {
